--- a/material/src/app/select/select.component.html
+++ b/material/src/app/select/select.component.html
@@ -1,5 +1,4 @@
-
-  <h4>Basic mat-select</h4>
+<h4>Basic mat-select</h4>
 <mat-form-field>
   <mat-label>Favorite food</mat-label>
   <mat-select>
@@ -9,7 +8,7 @@
   </mat-select>
 </mat-form-field>
 
-<h4>Basic native select</h4>
+<!-- <h4>Basic native select</h4>
 <mat-form-field>
   <mat-label>Cars</mat-label>
   <select matNativeControl required>
@@ -18,5 +17,4 @@
     <option value="mercedes">Mercedes</option>
     <option value="audi">Audi</option>
   </select>
-</mat-form-field>
-
+</mat-form-field> -->
