--- a/material/src/app/select/select.component.html
+++ b/material/src/app/select/select.component.html
@@ -1,20 +1,24 @@
 <h4>Basic mat-select</h4>
+
 <mat-form-field>
-  <mat-label>Favorite food</mat-label>
+  <mat-label>State</mat-label>
   <mat-select>
-    <mat-option *ngFor="let food of foods" [value]="food.code">
-      {{food.name}}
+    <mat-option *ngFor="let state of states" [value]="state.code">
+      {{state.name}}
     </mat-option>
   </mat-select>
 </mat-form-field>
 
-<!-- <h4>Basic native select</h4>
 <mat-form-field>
-  <mat-label>Cars</mat-label>
-  <select matNativeControl required>
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
-    <option value="mercedes">Mercedes</option>
-    <option value="audi">Audi</option>
-  </select>
-</mat-form-field> -->
+  <mat-label>Vendor</mat-label>
+  <mat-select>
+    <mat-option *ngFor="let vendor of vendors" [value]="vendor.code">
+      {{vendor.name}}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Order Number(s)</mat-label>
+  <textarea matInput placeholder="Textarea" rows="4" cols="50"></textarea>
+</mat-form-field>
