--- a/material/src/app/select/select.component.html
+++ b/material/src/app/select/select.component.html
@@ -32,3 +32,6 @@
     </mat-error>
   </mat-form-field>
 </p>
+<div class="button">
+  <button mat-raised-button color="primary">Process</button>
+</div>
